--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <h1 class="title">Rick and More</h1>
+    <div class="title">Rick<span>and </span>Morty</div>
+    <div class="title middle">Rick<span>and </span>Morty</div>
+    <div class="title bottom">Rick<span>and </span>Morty</div>
     <main>
-      <div class="search-bar-container" data-js="search-bar-container">
-      </div>
+      <div class="search-bar-container" data-js="search-bar-container"></div>
       <ul class="card-container" data-js="card-container"></ul>
     </main>
-    <nav class="navigation" data-js="navigation">
-    </nav>
+    <nav class="navigation" data-js="navigation"></nav>
   </body>
 </html>
